--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
             <!-- #####  Main Content Start  #####-->
             <div class="main-content">
                 <!-- #####  Home Section Start  #####-->
-                <section class="home section">
+                <section class="home section hidden">
                     <div class="container">
                         <div class="row">
                             <div class="home-info padd-15">
                                 <h3 class="hello">Hello, my name is <span class="name">Chirag Ferwani</span></h3>
                                 <h3 class="my-profession">I'm a <span class="typing">web designer</span></h3>
-                                <p>I'm passionate about coding and computer science and have a keen interest in AI. Improving my networking skills and gaining a leadership position are my career interest. People who work smart inspire me.</p>
+                                <p>I'm passionate about technology</p>
+                                <p>Fun fact: The computer was born to solve the problems that didn't exist before. </p>
                                 <a href="#contact" class="btn hire-me">About Me</a>  
                             </div> 
                             <div class="home-img padd-15">
@@ -49,6 +50,119 @@
                     </div>
                 </section>
                  <!-- #####  Home Section End  #####-->
+                 <!-- #####  About Section Start  #####-->
+                    <section class="about section">
+                        <div class="container">
+                            <div class="row">
+                                <div class="section-title padd-15">
+                                    <h2>About Me</h2>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="about-content padd-15">
+                                    <div class="row">
+                                       <div class="about-text padd-15">
+                                        <h3>I'm <span>Chirag Ferwani</span></h3>
+                                        <p>My name is Chirag Ferwani. I matriculated in the year 2021 from Cambridge School ICSE and I'm currently studying in Pimpri Chinchwad Education Trust's in IT department, I like coding and computer science and have a keen interest in AI. Improving my networking skills and gaining a leadership position are my career interest. I like listening to music, staying indoors and reading books. People who work smart inspire me.</p>
+                                       </div> 
+                                    </div>
+                                    <div class="row">
+                                        <div class="personal-info padd-15">
+                                            <div class="row">
+                                                <div class="info-item padd-15">
+                                                    <p>Birthday : <span>27 july 2005</span></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>Age : <span>17</span></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>Website : <a href="https://linktr.ee/chiragferwani"><span>linkt.ree/chiragferwani</span></a></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>Email : <a href="mailto:chiragferwani@gmail.com"><span>chiragferwani@gmail.com</span></a></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>Phone : <span>+918767386340</span></p>
+                                                </div>
+                                                <div class="info-item padd-15">
+                                                    <p>City : <span>Pune</span></p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="buttons padd-15">
+                                                    <a href="#" class="btn">Download CV</a>
+                                                    <a href="#contact" class="btn hire-me">Contact</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="skills padd-15">
+                                            <div class="row">
+                                                <div class="skill-item padd-15">
+                                                    <h5>CSS</h5>
+                                                    <div class="progress">
+                                                        <div class="progress-in" style="width: 80%;"></div>
+                                                            <div class="skill-percent">80%</div>
+                                                        </div>
+                                                    </div>
+                                                <div class="skill-item padd-15">
+                                                    <h5>HTML</h5>
+                                                        <div class="progress">
+                                                            <div class="progress-in" style="width: 90%;"></div>
+                                                                <div class="skill-percent">90%</div>
+                                                            </div>
+                                                        </div>  
+                                                        <div class="skill-item padd-15">
+                                                            <h5>JS</h5>
+                                                            <div class="progress">
+                                                                <div class="progress-in" style="width: 50%;"></div>
+                                                                    <div class="skill-percent">50%</div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="skill-item padd-15">
+                                                                <h5>Python</h5>
+                                                                <div class="progress">
+                                                                    <div class="progress-in" style="width: 50%;"></div>
+                                                                        <div class="skill-percent">50%</div>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="skill-item padd-15">
+                                                                    <h5>Java</h5>
+                                                                    <div class="progress">
+                                                                        <div class="progress-in" style="width: 75%;"></div>
+                                                                            <div class="skill-percent">75%</div>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="skill-item padd-15">
+                                                                        <h5>C#</h5>
+                                                                        <div class="progress">
+                                                                            <div class="progress-in" style="width: 85%;"></div>
+                                                                                <div class="skill-percent">85%</div>
+                                                                            </div>
+                                                                        </div>  
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="education padd-15">
+                                                <h3 class="title">Education</h3>
+                                                <div class="row">
+                                                    <div class="timeline-box padd-15">
+                                                        <div class="timeline shadow-dark">
+                                                            timeline
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="experience padd-15">
+                                                <h3 class="title">Experience</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                            </div>
+                        </div>
+                    </section>
+                 <!-- #####  About Section End  #####-->
             </div>
             <!-- #####  Main Content End  #####-->
         </div> 
