--- a/index.html
+++ b/index.html
@@ -162,4 +162,12 @@
                             </div>
                         </div>
                     </section>
-                 
+                 <!-- #####  About Section End  #####-->
+            </div>
+            <!-- #####  Main Content End  #####-->
+        </div> 
+        <!-- #####   Main Cointainer End    #####-->
+        <!--#####   JS Files    #####-->
+        <script src="js/script.js"></script>
+    </body>
+</html>
