--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <i class="fa fa-list"></i>
     </div>
     <div class="logo">
-      <a href="#">Hamsho</a>
+      <a href="#"><span>C</span>hirag</a>
     </div>
     <ul class="list-unstyled navbar-section">
       <li  class="active" data-class=".home"><i class="fa fa-home"></i>Home</li>
@@ -36,7 +36,7 @@
       <li data-class=".contact"><i class="fa fa-comments"></i>Contact</li>
     </ul>
     <div class="copyright">
-      &copy; 2020 The M.Hamsho Template
+      &copy; 2022 Chirag Ferwani
     </div>
   </div>
   <div class="change-color">
@@ -115,56 +115,56 @@
     <div class="effect effect5"></div>
     <div class="home-content">
       <div class="img">
-        <img src="images/man1.png" alt="">
+        <img src="images/home.jpg" alt="">
       </div>
-      <h2 class="title">Mohamad Hamsho</h2>
+      <h2 class="title">Chirag Ferwani</h2>
       <p class="lead subtitle">I'm a <span class="typed"></span></p>
+      <p class="lead subtitle">Fun fact: The computer was born to solve the problems that didn't exist before.</p><br>
       <ul class="list-unstyled">
-        <li><i class="fa fa-twitter"></i></li>
-        <li><i class="fa fa-facebook"></i></li>
-        <li><i class="fa fa-instagram"></i></li>
-        <li><i class="fa fa-linkedin"></i></li>
+        <li><a href="https://twitter.com/chiragf_27"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://www.youtube.com/channel/UCagMxg3RXjOjYQRPnkZbx7w"><i class="fa fa-youtube"></i></a></li>
+        <li><a href="https://www.instagram.com/chiragf_27/"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/chiragferwani/"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://github.com/chiragf27"><i class="fa fa-github"></i></a></li>
+        <li><a href="https://www.buymeacoffee.com/chiragf27"><i class="fa fa-coffee"></i></a></li>
       </ul>
     </div>
   </section>
   <section class="about section">
     <h2 class="about-title">About ME</h2>
-    <h4 class="subtitle">I'm Hamsho And <span>Web Developer</span></h4>
-    <p class="lead description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam voluptatum
-      debitis quos doloremque, omnis obcaecati rem animi! Ducimus eos omnis sapiente! Necessitatibus quia natus enim
-      culpa. Iste est tempore consequatur rerum nulla facere neque consequuntur accusamus dolores, alias voluptas ipsam
-      porro quaerat pariatur nihil odio delectus. Illo, ex porro.</p>
+    <h4 class="subtitle">I'm <span>Chirag Ferwani</span></h4>
+    <p class="lead description">I matriculated in the year 2021 from Cambridge School ICSE and I'm currently studying in Pimpri Chinchwad Education Trust's in IT department, I like coding and computer science and have a keen interest in AI. Improving my networking skills and gaining a leadership position are my career interest. I like listening to music, staying indoors and reading books. People who work smart inspire me.</p>
     <div class="row">
       <div class="col-md-12">
         <div class="about-info row">
           <div class="col-lg-6">
             <div class="about-info-content1">
               <div>
-                Birthday : <span>20 October 1989</span>
+                Birthday : <span>27 July 2005</span>
               </div>
               <div>
-                Website : <span>www.websiteme.com</span>
+                Website : <span>https://linktr.ee/chiragferwani</span>
               </div>
               <div>
-                Degree : <span>M.Teach</span>
+                Email : <span>chiragferwani@gmail.com</span>
               </div>
               <div>
-                City : <span>Istanbul</span>
+                City : <span>Pune</span>
               </div>
-              <a href="#" class="btn btn1">Download CV</a>
+              <a href="#" class="btn btn1">Contact</a>
               <a href="#" class="btn btn2">Hire Me</a>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="about-info-content2">
               <div>
-                Age : <span>32</span>
+                Age : <span>17</span>
               </div>
               <div>
-                Email : <span>info@gmail.com</span>
+                Gender : <span>Male</span>
               </div>
               <div>
-                Phone : <span>+905510356296</span>
+                Phone : <span>+918767386340</span>
               </div>
               <div>
                 Freelance : <span>Availabe</span>
@@ -172,20 +172,21 @@
             </div>
           </div>
         </div>
-      </div>
+      </div><br>
       <div class="col-lg-12">
         <div class="progress-section">
           <div class="progress1">
+            <br>
             <div class="prog-title">
-              Javascript <span>80%</span>
+              HTML <span>90%</span>
             </div>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="progress2">
             <div class="prog-title">
-              Wordpress <span>73%</span>
+              CSS <span>70%</span>
             </div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
@@ -193,18 +194,34 @@
           </div>
           <div class="progress3">
             <div class="prog-title">
-              Python <span>66%</span>
+              Javascript <span>50%</span>
             </div>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="progress3">
+            <div class="prog-title">
+              Python <span>50%</span>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="progress4">
             <div class="prog-title">
-              Bootstrap <span>84%</span>
+              Java <span>80%</span>
             </div>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="64" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="progress5">
+            <div class="prog-title">
+              C# <span>75%</span>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
         </div>
@@ -217,21 +234,24 @@
           <div class="education-content">
             <div class="item">
               <div class="date">
-                <span><i class="fa fa-database"></i>2013 - 2015</span>
-                <h5>Master in Computer Science</h5>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quaerat deserunt illum quia
-                  architecto error? Aut nobis in voluptas aperiam consectetur, obcaecati tenetur nulla nemo?</p>
+                <span><i class="fa fa-database"></i>2021 - Present</span>
+                <h5>Diploma in Information Technology</h5>
+                <p class="lead">PCET's Pimpri Chinchwad Polytechnic, MSBTE - Pune</p>
+                <ul class="list-unstyled">
+                  <li><a href="https://www.pcpolytechnic.com/"><i class="fa fa-link"></i> visit website</a></li>
+                </ul>
               </div>
             </div>
             <div class="item">
               <div class="date">
-                <span><i class="fa fa-database"></i>2013 - 2015</span>
-                <h5>Master in Computer Science</h5>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quaerat deserunt illum quia
-                  architecto
-                  error? Aut nobis in voluptas aperiam consectetur, obcaecati tenetur nulla nemo?</p>
+                <span><i class="fa fa-database"></i>2010 - 2020</span>
+                <h5>Matriculation</h5>
+                <p class="lead">Cambridge School, ICSE - Aurangabad</p>
+                <ul class="list-unstyled">
+                  <li><a href="http://www.cambridge-aurangabad.com/"><i class="fa fa-link"></i> visit website</a></li>
+                </ul>
               </div>
-            </div>
+            </div><!--
             <div class="item third">
               <div class="date">
                 <span><i class="fa fa-database"></i>2013 - 2015</span>
@@ -240,7 +260,7 @@
                   architecto
                   error? Aut nobis in voluptas aperiam consectetur, obcaecati tenetur nulla nemo?</p>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
@@ -250,21 +270,24 @@
           <div class="education-content">
             <div class="item">
               <div class="date">
-                <span><i class="fa fa-database"></i>2013 - 2015</span>
-                <h5>Master in Computer Science</h5>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quaerat deserunt illum quia
-                  architecto error? Aut nobis in voluptas aperiam consectetur, obcaecati tenetur nulla nemo?</p>
+                <span><i class="fa fa-database"></i>2022 - Present</span>
+                <h5>Proprietor [CEO] </h5>
+                <p class="lead">Error By Night</p>
+                <ul class="list-unstyled">
+                  <li><a href="https://www.youtube.com/channel/UCagMxg3RXjOjYQRPnkZbx7w"><i class="fa fa-link"></i> visit website</a></li>
+                </ul>
               </div>
             </div>
             <div class="item">
               <div class="date">
-                <span><i class="fa fa-database"></i>2013 - 2015</span>
-                <h5>Master in Computer Science</h5>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quaerat deserunt illum quia
-                  architecto
-                  error? Aut nobis in voluptas aperiam consectetur, obcaecati tenetur nulla nemo?</p>
+                <span><i class="fa fa-database"></i>2020 - 2021</span>
+                <h5>Content Head At ICSE Scholars Society</h5>
+                <p class="lead">ICSE Scholars Society</p>
+                <ul class="list-unstyled">
+                  <li><a href="https://instabio.cc/3072006JIXTX4"><i class="fa fa-link"></i> visit website</a></li>
+                </ul>
               </div>
-            </div>
+            </div><!--
             <div class="item third">
               <div class="date">
                 <span><i class="fa fa-database"></i>2013 - 2015</span>
@@ -273,7 +296,7 @@
                   architecto
                   error? Aut nobis in voluptas aperiam consectetur, obcaecati tenetur nulla nemo?</p>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
@@ -558,7 +581,7 @@
   <script src="js/typed.js"></script>
   <script>
         var typed = new Typed('.typed', {
-            strings: ['Graphic Designer', 'Web Developer', 'Creative looper'],
+            strings: ['Programmer', 'Web Developer', 'AI Enthusiast'],
             typeSpeed: 80, // Default value
             backSpeed: 20,
             loop: true
