--- a/index.html
+++ b/index.html
@@ -310,15 +310,15 @@
         <div class="services-item">
           <div class="icon"><i class="fa fa-laptop"></i></div>
           <h5 class="title">Web Design</h5>
-          <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ea, soluta.
+          <p class="lead">I provide you with a customized website design that's perfect for your business or personal site
           </p>
         </div>
       </div>
       <div class="col-md-6 col-lg-4">
         <div class="services-item">
-          <div class="icon"><i class="fa fa-image"></i></div>
-          <h5 class="title">Photography</h5>
-          <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ea, soluta.
+          <div class="icon"><i class="fa fa-bug"></i></div>
+          <h5 class="title">App Development</h5>
+          <p class="lead">Building iOS & Android applications that effectively complement or substitute web solutions.
           </p>
         </div>
       </div>
@@ -326,7 +326,7 @@
         <div class="services-item">
           <div class="icon"><i class="fa fa-code"></i></div>
           <h5 class="title">Web Development</h5>
-          <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ea, soluta.
+          <p class="lead">Building custom e-commerce and intranet experiences using the latest and proven web technologies.
           </p>
         </div>
       </div>
@@ -334,15 +334,15 @@
         <div class="services-item">
           <div class="icon"><i class="fa fa-video"></i></div>
           <h5 class="title">Video Editing</h5>
-          <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ea, soluta.
+          <p class="lead">Includes the review and refinement of video and special effects for motion pictures, television, or online video
           </p>
         </div>
       </div>
       <div class="col-md-6 col-lg-4">
         <div class="services-item">
           <div class="icon"><i class="fa fa-rocket"></i></div>
-          <h5 class="title">SEO Optimization</h5>
-          <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ea, soluta.
+          <h5 class="title">Project Building</h5>
+          <p class="lead">Includes programming in Python, Java & C#.<br><br><br>
           </p>
         </div>
       </div>
@@ -350,10 +350,15 @@
         <div class="services-item">
           <div class="icon"><i class="fa fa-cc-diners-club"></i></div>
           <h5 class="title">Logo Design</h5>
-          <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ea, soluta.
+          <p class="lead">I deliver a memorable logo that noticeably stands out, ultimately building a unique identity. 
           </p>
         </div>
-      </div>
+      </div><!--
+    </div class="btn">
+    <br>
+    <a href="#" class="btn btn1">Contact</a>
+    <a href="#" class="btn btn2">Hire Me</a>
+  </div>-->
     </div>
   </section>
   <!-- End Services Section -->
@@ -367,8 +372,8 @@
         <ul class="list-unstyled portofolio-filter">
           <li class="active" data-filter="all">All</li>
           <li data-filter="web design">Web Design</li>
-          <li data-filter="photography">Photography</li>
-          <li data-filter="wordpress">Wordpress</li>
+          <li data-filter="photography">Python</li>
+          <!--<li data-filter="wordpress">Wordpress</li>-->
         </ul>
       </div>
     </div>
