--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Personal Portfolio Template</title>
+  <title>Chirag Ferwani</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- FontAwesome Library -->
@@ -380,37 +380,37 @@
     <div class="row portofolio-items">
       <div class="col-md-6 col-lg-4 portofolio-item" data-category="web design">
         <div class="img">
-          <img src="images/portfolio/shuffle cards/1.jpg" alt="">
+          <img src="images/portfolio/shuffle cards/web_1.jpg" alt="">
           <div class="porto-overlay">
             <h5>Web Design</h5>
-            <div class="icon"><i class="fa fa-search"></i></div>
+            <div class="icon"><a href="https://chiragf27.github.io/wpd_project.com/"><i class="fa fa-link"></i></a></div>
           </div>
         </div>
       </div>
       <div class="col-md-6 col-lg-4 portofolio-item" data-category="photography">
         <div class="img">
-          <img src="images/portfolio/shuffle cards/2.jpg" alt="">
+          <img src="images/portfolio/shuffle cards/py1.jpg" alt="">
           <div class="porto-overlay">
-            <h5>Photography</h5>
-            <div class="icon"><i class="fa fa-search"></i></div>
+            <h5>Python</h5>
+            <div class="icon"><a href="https://github.com/chiragf27/Projects/blob/main/python_projects/hand_detection.py"><i class="fa fa-link"></i></a></div>
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4 portofolio-item" data-category="wordpress">
+      <div class="col-md-6 col-lg-4 portofolio-item" data-category="photography">
         <div class="img">
-          <img src="images/portfolio/shuffle cards/3.jpg" alt="">
+          <img src="images/portfolio/shuffle cards/py2.jpg" alt="">
           <div class="porto-overlay">
-            <h5>Wordpress</h5>
-            <div class="icon"><i class="fa fa-search"></i></div>
+            <h5>Python</h5>
+            <div class="icon"><a href="https://github.com/chiragf27/Projects/blob/main/python_projects/sudoku_solver.py"><i class="fa fa-link"></i></a></div>
           </div>
         </div>
       </div>
       <div class="col-md-6 col-lg-4 portofolio-item" data-category="web design">
         <div class="img">
-          <img src="images/portfolio/shuffle cards/4.jpg" alt="">
+          <img src="images/portfolio/shuffle cards/web_2.jpg" alt="">
           <div class="porto-overlay">
             <h5>Web Design</h5>
-            <div class="icon"><i class="fa fa-search"></i></div>
+            <div class="icon"><a href="https://chiragf27.github.io/pcpolytechnic.com/"><i class="fa fa-link"></i></a></div>
           </div>
         </div>
       </div>
