--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         <div class="services-item">
           <div class="icon"><i class="fa fa-rocket"></i></div>
           <h5 class="title">Project Building</h5>
-          <p class="lead">Includes programming in Python, Java & C#.<br><br><br>
+          <p class="lead">Includes programming in Python, Java & C#.<br><br>
           </p>
         </div>
       </div>
@@ -416,46 +416,46 @@
       </div>
       <div class="col-md-6 col-lg-4 portofolio-item" data-category="photography">
         <div class="img">
-          <img src="images/portfolio/shuffle cards/5.jpg" alt="">
+          <img src="images/portfolio/shuffle cards/py_3.jpg" alt="">
           <div class="porto-overlay">
-            <h5>Photography</h5>
-            <div class="icon"><i class="fa fa-search"></i></div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-4 portofolio-item" data-category="wordpress">
-        <div class="img">
-          <img src="images/portfolio/shuffle cards/6.jpg" alt="">
-          <div class="porto-overlay">
-            <h5>Wordpress</h5>
-            <div class="icon"><i class="fa fa-search"></i></div>
+            <h5>Python</h5>
+            <div class="icon"><a href="https://github.com/chiragf27/Projects/blob/main/python_projects/designs.py"><i class="fa fa-link"></i></a></div>
           </div>
         </div>
       </div>
       <div class="col-md-6 col-lg-4 portofolio-item" data-category="web design">
         <div class="img">
-          <img src="images/portfolio/1.jpg" alt="">
+          <img src="images/portfolio/shuffle cards/web_3.jpg" alt="">
           <div class="porto-overlay">
             <h5>Web Design</h5>
-            <div class="icon"><i class="fa fa-search"></i></div>
+            <div class="icon"><a href="https://chiragf27.github.io/responsive-portfolio/"><i class="fa fa-link"></i></a></div>
           </div>
         </div>
       </div>
       <div class="col-md-6 col-lg-4 portofolio-item" data-category="photography">
         <div class="img">
-          <img src="images/portfolio/2.jpg" alt="">
+          <img src="images/portfolio/shuffle cards/py_4.jpg" alt="">
           <div class="porto-overlay">
-            <h5>Photography</h5>
-            <div class="icon"><i class="fa fa-search"></i></div>
+            <h5>Python</h5>
+            <div class="icon"><a href="https://github.com/chiragf27/Projects/blob/main/python_projects/currency_converter.py"><i class="fa fa-link"></i></a></div>
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4 portofolio-item" data-category="wordpress">
+      <div class="col-md-6 col-lg-4 portofolio-item" data-category="photography">
         <div class="img">
-          <img src="images/portfolio/3.jpg" alt="">
+          <img src="images/portfolio/shuffle cards/py_5.jpg" alt="">
           <div class="porto-overlay">
-            <h5>Wordpress</h5>
-            <div class="icon"><i class="fa fa-search"></i></div>
+            <h5>Python</h5>
+            <div class="icon"><a href="https://github.com/chiragf27/Projects/blob/main/python_projects/weather_detection.py"><i class="fa fa-link"></i></a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4 portofolio-item" data-category="photography">
+        <div class="img">
+          <img src="images/portfolio/shuffle cards/py_6.jpg" alt="">
+          <div class="porto-overlay">
+            <h5>Python</h5>
+              <div class="icon"><a href="https://github.com/chiragf27/Projects/tree/main/python_projects"><i class="fa fa-link"></i></a></div>
           </div>
         </div>
       </div>
