--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           <img src="images/portfolio/shuffle cards/web_3.jpg" alt="">
           <div class="porto-overlay">
             <h5>Web Design</h5>
-            <div class="icon"><a href="https://chiragf27.github.io/responsive-portfolio/"><i class="fa fa-link"></i></a></div>
+            <div class="icon"><a href="https://chiragf27.github.io/portfolio/"><i class="fa fa-link"></i></a></div>
           </div>
         </div>
       </div>
