--- a/index.html
+++ b/index.html
@@ -605,31 +605,31 @@
         </div>
       </div>
     </div>
+    <form action="https://formsubmit.co/956a7c562989b9075f13302d968098ea" method="POST">
     <div class="row pt-3">
       <div class="col-md-6">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Name*" aria-label="Username" aria-describedby="basic-addon1">
+          <input type="name" name="name"  id="name"  class="form-control" placeholder="Name*" required>
         </div>
       </div>
       <div class="col-md-6">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Email*" aria-label="Username"
-            aria-describedby="basic-addon1">
+          <input type="email"  name="email"  id="email" class="form-control" placeholder="Email*">
         </div>
       </div>
       <div class="col-md-12">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Subject*" aria-label="Username"
-            aria-describedby="basic-addon1">
+          <input type="subject"  name="subject"  id="subject" class="form-control" placeholder="Subject*">
         </div>
       </div>
       <div class="col-md-6">
         <div class="input-group input-textarea">
-          <textarea class="form-control" placeholder="Your Message"></textarea>
+          <textarea  id="message" name="message" class="form-control" placeholder="Your Message"></textarea>
         </div>
       </div>
     </div>
-      <a href="" class="btn">Send</a>
+      <a type="submit" href="" class="btn">Send</a>
+    </form>
   </section>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
