final commit of the day

--- a/index.html
+++ b/index.html
@@ -604,7 +604,71 @@
           <p>chiragferwani@gmail.com</p>
         </div>
       </div>
+      <div class="col-md-4">
+        <div class="contact-item">
+          <div class="icon"><i class="fa fa-github"></i></div>
+          <h5 class="cont-title">Github</h5>
+          <a href="#"><p>chiragf27</p></a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="contact-item">
+          <div class="icon"><i class="fa fa-linkedin"></i></div>
+          <h5 class="cont-title">Linkkedin</h5>
+          <a href="https://www.linkedin.com/in/chiragferwani/"><p>chiragferwani</p></a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="contact-item">
+          <div class="icon"><i class="fa fa-globe"></i></div>
+          <h5 class="cont-title">Linktree</h5>
+          <a href="https://linktr.ee/chiragferwani"><p>chiragferwani</p></a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="contact-item">
+          <div class="icon"><i class="fa fa-facebook"></i></div>
+          <h5 class="cont-title">Facebook</h5>
+          <a href="https://hi-in.facebook.com/people/Chirag-Ferwani/100069336171432/"><p>Chirag Ferwani</p></a>
+        </div>
+      </div>
+       <div class="col-md-4">
+        <div class="contact-item">
+          <div class="icon"><i class="fa fa-instagram"></i></div>
+          <h5 class="cont-title">Instagram</h5>
+          <a href="https://www.instagram.com/chiragf_27/"><p>chiragf_27</p></a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="contact-item">
+          <div class="icon"><i class="fa fa-twitter"></i></div>
+          <h5 class="cont-title">Facebook</h5>
+          <a href="https://twitter.com/chiragf_27"><p>chiragf_27</p></a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="contact-item">
+          <div class="icon"><i class="fa fa-youtube"></i></div>
+          <h5 class="cont-title">YouTube</h5>
+          <a href="https://www.youtube.com/channel/UCagMxg3RXjOjYQRPnkZbx7w"><p>Error By Night</p></a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="contact-item">
+          <div class="icon"><i class="fa fa-coffee"></i></div>
+          <h5 class="cont-title">Buy Me A Coffee</h5>
+          <a href="https://www.buymeacoffee.com/chiragf27"><p>chiragf27</p></a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="contact-item">
+          <div class="icon"><i class="fa fa-telegram"></i></div>
+          <h5 class="cont-title">Telegram</h5>
+          <a href="https://t.me/Chirag_F"><p>Chirag_F</p></a>
+        </div>
+      </div>
     </div>
+    <!--
     <div class="row pt-3">
       <div class="col-md-6">
         <div class="input-group">
@@ -648,7 +712,7 @@
 								message => alert("Message Sent Successfully")
 								);
 									}
-								</script>
+								</script>-->
   </section>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
