--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
         <div class="contact-item">
           <div class="icon"><i class="fa fa-envelope"></i></div>
           <h5 class="cont-title">Email</h5>
-          <p>chiragferwani@gmail.com</p>
+          <a href="mailto:chiragferwani@gmail.com"><p>chiragferwani@gmail.com</p></a>
         </div>
       </div>
       <div class="col-md-4">
