--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
               <div>
                 City : <span>Pune</span>
               </div>
-              <a href="#" class="btn btn1">Contact</a>
-              <a href="#" class="btn btn2">Hire Me</a>
+              <a href="#contact" class="btn btn1">Contact</a>
+              <a href="#contact" class="btn btn2">Hire Me</a>
             </div>
           </div>
           <div class="col-lg-6">
@@ -580,9 +580,9 @@
   </section>
 
   <!-- Blog End -->
-  <section class="contact section">
+  <section class="contact section" >
     <h2 class="contact-title">Contact ME</h2>
-    <div class="row text-center">
+    <div class="row text-center" id="contact">
       <div class="col-md-4">
         <div class="contact-item">
           <div class="icon"><i class="fa fa-phone"></i></div>
