--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <ul class="list-unstyled">
         <li><a href="https://twitter.com/chiragf_27"><i class="fa fa-twitter"></i></a></li>
         <li><a href="https://www.youtube.com/channel/UC3zPELPks5o4Y4_l21VT44Q"><i class="fa fa-youtube"></i></a></li>
-        <li><a href="https://www.instagram.com/chiragf_27/"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.instagram.com/chiragferwani/"><i class="fa fa-instagram"></i></a></li>
         <li><a href="https://www.linkedin.com/in/chiragferwani/"><i class="fa fa-linkedin"></i></a></li>
         <li><a href="https://github.com/chiragf27"><i class="fa fa-github"></i></a></li>
         <li><a href="https://www.buymeacoffee.com/chiragf27"><i class="fa fa-coffee"></i></a></li>
@@ -637,7 +637,7 @@
         <div class="contact-item">
           <div class="icon"><i class="fa fa-instagram"></i></div>
           <h5 class="cont-title">Instagram</h5>
-          <a href="https://www.instagram.com/chiragf_27/"><p>chiragf_27</p></a>
+          <a href="https://www.instagram.com/chiragferwani/"><p>chiragferwani</p></a>
         </div>
       </div>
       <div class="col-md-4">
